@@ -1,29 +1,106 @@
-plugins {
-  id 'java'
-  id 'application'
-  id 'com.github.johnrengelman.shadow' version '8.1.1'
-  id 'org.openjfx.javafxplugin' version '0.0.9'
-  id("com.github.onslip.gradle-one-jar") version "1.1.0"
+buildscript {
+    repositories {
+        mavenCentral()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath 'com.google.gradle:osdetector-gradle-plugin:1.7.0'
+        classpath 'org.javamodularity:moduleplugin:1.8.8'
+        classpath 'org.beryx:badass-jlink-plugin:2.24.4'
+    }
 }
 
+plugins {
+    id 'java-library'
+    id 'application'
+    id 'com.google.osdetector' version '1.7.0'
+    id 'org.javamodularity.moduleplugin' version '1.8.8'
+    id 'org.beryx.jlink' version '2.24.4'
+}
+
+ext.platform = osdetector.os == 'osx' ? osdetector.arch == 'aarch_64' ? 'mac-aarch64' : 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os == 'linux' ? osdetector.arch == 'aarch_64' ? 'linux-aarch64' : 'linux' : osdetector.os
+
+normalization {
+    runtimeClasspath {
+        ignore('/META-INF/MANIFEST.MF')
+    }
+}
 
 repositories {
     mavenCentral()
 }
 
-javafx {
-    version = "17"
-    modules = [ 'javafx.controls' ]
-}    
-
-mainClassName = 'game.MadRunner'
-
-jar {
-  manifest {
-    attributes 'Main-Class': 'game.MadRunner'
-  }
+dependencies {
+    implementation 'com.google.gradle:osdetector-gradle-plugin:1.7.0'
+    implementation "org.openjfx:javafx-base:${javafxVersion}:${platform}"
+    implementation "org.openjfx:javafx-graphics:${javafxVersion}:${platform}"
+    implementation "org.openjfx:javafx-controls:${javafxVersion}:${platform}"
+    implementation "org.openjfx:javafx-media:${javafxVersion}:${platform}"
 }
 
-task awesomeFunJar(type: OneJar) {
-  mainClass = 'game.MadRunner'
+
+ext.moduleName = 'eu.anwar.madrunner'
+mainClassName = 'eu.anwar.madrunner.Launcher'
+
+jar {
+    from {
+        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+        configurations.runtimeClasspath.collect {  it.isDirectory() ? it : zipTree(it)  }
+    } {
+        exclude "META-INF/*.SF"
+        exclude "META-INF/*.DSA"
+        exclude "META-INF/*.RSA"
+    }
+    manifest {
+        attributes(
+                'Implementation-Title': 'MadRunner',
+                'Class-Path': 'MadRunner-17.0.0.jar',
+                'Main-Class': 'eu.anwar.madrunner.Launcher'
+        )
+    }
+}
+
+jlink {
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    launcher {
+        name = 'eu.anwar.madrunner'
+    }
+}
+
+/*
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+tasks.withType(JavaExec) {
+    jvmArgs += "--enable-preview"
+}
+*/
+
+// start the from gradle
+task Main(type: JavaExec) {
+    main = "eu.anwar.madrunner.Launcher"
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+// Fix problems with loading resources
+sourceSets {
+    main {
+        output.setResourcesDir(java.outputDir)
+    }
+}
+
+run {
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        jvmArgs = [
+                '--module-path', classpath.asPath,
+                '--module', mainClassName
+        ]
+        classpath = files()
+    }
 }
